--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 </head>
 <body>
    <div id="navbar"> <div id="flex">
-    <div id="logo"><img src="logo.png" alt=""></div>
+    <div id="logo"><img src="/image/logo.png" alt=""></div>
     
    
 
